--- a/src/templates/auth/password_change.html
+++ b/src/templates/auth/password_change.html
@@ -4,7 +4,7 @@
 
 
 {% block title %}
-    {{ block.super }} | {{ title }}
+    {{ block.super }} | Password Change
 {% endblock  %}
 
 {% block content %}
@@ -19,7 +19,7 @@
         </div>
     </div>
 </div>
-<!--- register form-->
+<!--- Password Change-->
 <div class="login-register-area pt-20 pb-100">
     <div class="container">
         <div class="row">
@@ -27,7 +27,7 @@
                 <div class="login-register-wrapper">
                     <div class="login-register-tab-list nav">
                         <a class="active" data-toggle="tab" href="#lg1">
-                            <h4> {{ main_heading }} </h4>
+                            <h4> Password Change </h4>
                         </a>
                     </div>
                     <div class="tab-content">
@@ -38,10 +38,7 @@
                                         {{ form.non_field_errors }}
                                         {{form|crispy}}
                                         <div class="button-box">
-                                            <div class="login-toggle-btn">
-                                                <a href={% url 'auth:login' %}>Already have an account? Login!</a>
-                                            </div>
-                                            <button type="submit"><span>{{submit_btn_text}}</span></button>
+                                            <button type="submit"><span>Save Change</span></button>
                                         </div>
                                     </form>
                                 </div>
