--- a/src/templates/auth/password_change_done.html
+++ b/src/templates/auth/password_change_done.html
@@ -4,7 +4,7 @@
 
 
 {% block title %}
-    {{ block.super }} | {{ title }}
+    {{ block.super }} | Password Change Done
 {% endblock  %}
 
 {% block content %}
@@ -19,7 +19,7 @@
         </div>
     </div>
 </div>
-<!--- register form-->
+<!--- password reset done-->
 <div class="login-register-area pt-20 pb-100">
     <div class="container">
         <div class="row">
@@ -27,23 +27,20 @@
                 <div class="login-register-wrapper">
                     <div class="login-register-tab-list nav">
                         <a class="active" data-toggle="tab" href="#lg1">
-                            <h4> {{ main_heading }} </h4>
+                            <h4> Password Change Done </h4>
                         </a>
                     </div>
                     <div class="tab-content">
                         <div id="lg1" class="tab-pane active">
                             <div class="login-form-container">
                                 <div class="login-register-form">
-                                    <form enctype="multipart/form-data" action="" method="post"> {% csrf_token %}
-                                        {{ form.non_field_errors }}
-                                        {{form|crispy}}
+                                    <div class="text-center">
+                                        <p class="text-success text-center">Password changed succesfully. Please keep your password secret.</p>
+                                        <br>
                                         <div class="button-box">
-                                            <div class="login-toggle-btn">
-                                                <a href={% url 'auth:login' %}>Already have an account? Login!</a>
-                                            </div>
-                                            <button type="submit"><span>{{submit_btn_text}}</span></button>
+                                            <button class=""><a href={% url 'auth:login' %}>Login</a></button>
                                         </div>
-                                    </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
