--- a/src/templates/profiles/user_profile_update.html
+++ b/src/templates/profiles/user_profile_update.html
@@ -34,7 +34,7 @@
                             <div class="login-form-container">
                                 <div class="login-register-form">
                                     
-                                    <form action="#" method="post"> {% csrf_token %}
+                                    <form action="" method="post"> {% csrf_token %}
                                         {{ user_form|crispy }}
                                         {{ profile_form|crispy }}
                                         {{ address_form|crispy }}
