--- a/src/templates/auth/password_reset_failed.html
+++ b/src/templates/auth/password_reset_failed.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 </div>
-<!--- register form-->
+<!--- password reset failed-->
 <div class="login-register-area pt-20 pb-100">
     <div class="container">
         <div class="row">
@@ -34,16 +34,13 @@
                         <div id="lg1" class="tab-pane active">
                             <div class="login-form-container">
                                 <div class="login-register-form">
-                                    <form enctype="multipart/form-data" action="" method="post"> {% csrf_token %}
-                                        {{ form.non_field_errors }}
-                                        {{form|crispy}}
+                                    <div class="text-center">
+                                        <p class="text-danger text-center">{{password_reset_failed_message}}</p>
+                                        <br>
                                         <div class="button-box">
-                                            <div class="login-toggle-btn">
-                                                <a href={% url 'auth:login' %}>Already have an account? Login!</a>
-                                            </div>
-                                            <button type="submit"><span>{{submit_btn_text}}</span></button>
+                                            <button class=""><a href={% url 'auth:password_reset' %}>Try again</a></button>
                                         </div>
-                                    </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
