--- a/src/templates/auth/verify_and_password_reset.html
+++ b/src/templates/auth/verify_and_password_reset.html
@@ -4,7 +4,7 @@
 
 
 {% block title %}
-Register (Verify Phone)
+    {{ block.super }} | {{ title }}
 {% endblock  %}
 
 {% block content %}
@@ -26,26 +26,18 @@ Register (Verify Phone)
             <div class="col-lg-7 col-md-12 ml-auto mr-auto">
                 <div class="login-register-wrapper">
                     <div class="login-register-tab-list nav">
-                        <a class="active" data-toggle="tab" href="#lg2">
-                            <h4> register (Verify Phone) </h4>
-                        </a>
-                        <a href={% url 'auth:login' %}>
-                            <h4> login </h4>
+                        <a class="active" data-toggle="tab" href="#lg1">
+                            <h4> {{ main_heading }} </h4>
                         </a>
                     </div>
                     <div class="tab-content">
                         <div id="lg1" class="tab-pane active">
                             <div class="login-form-container">
                                 <div class="login-register-form">
-                                    <form action="" method="post"> {% csrf_token %}
+                                    <form enctype="multipart/form-data" action="" method="post"> {% csrf_token %}
                                         {{ form.non_field_errors }}
                                         {{form|crispy}}
                                         <div class="button-box">
-                                            <div class="login-toggle-btn">
-                                                <!-- <input type="checkbox">
-                                                <label>Remember me</label> -->
-                                                <!-- <a href="#">Forgot Password?</a> -->
-                                            </div>
                                             <button type="submit"><span>{{submit_btn_text}}</span></button>
                                         </div>
                                     </form>
