--- a/src/templates/partials/mid_header.html
+++ b/src/templates/partials/mid_header.html
@@ -13,7 +13,7 @@
 				<div class="header-middle-right f-right">
 					<div class="header-login">
 						{% if request.user.is_authenticated %}
-						<a href="#user-profile">
+						<a href={{ request.user.get_profile_url }}>
 							<div class="header-icon-style">
 								<img src="{{ request.user.image.url }}" alt="user"
 									style="
@@ -29,7 +29,12 @@
 							</div>
 							<div class="login-text-content">
 								<p>
-									{{request.user.first_name|capfirst}}<br />
+									{% if request.user.first_name %}
+									{{request.user.first_name|capfirst}}
+									{% else %}
+									Your
+									{% endif %}
+									<br />
 									<span>Account</span>
 								</p>
 							</div>
