--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -60,5 +60,7 @@
         <script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
         <script src="{% static 'assets/js/plugins.js' %}"></script>
         <script src="{% static 'assets/js/main.js' %}"></script>
+        <!--jquery-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
     </body>
 </html>
