--- a/src/templates/adminPanel/store/all_store_request.html
+++ b/src/templates/adminPanel/store/all_store_request.html
@@ -9,7 +9,7 @@ All Request Store
         <div class="br-pageheader pd-y-15 pd-l-20">
             <nav class="breadcrumb pd-0 mg-0 tx-12">
                 <a class="breadcrumb-item" href="{% url 'adminpanel:home' %}">Home</a>
-                <span class="breadcrumb-item active">All Request Store</span>
+                <span class="breadcrumb-item active text-center">All Request Store</span>
             </nav>
         </div>
 
