--- a/src/templates/adminPanel/store/all_store.html
+++ b/src/templates/adminPanel/store/all_store.html
@@ -51,7 +51,7 @@ All Vendors
             <!--form end-->
 
             {% if all_store %}
-                <h6 class="tx-gray-800 tx-uppercase tx-bold tx-14 mg-b-10 mg-t-20">All Request For The Store</h6>
+                <h6 class="tx-gray-800 tx-uppercase tx-bold tx-14 mg-b-30 mg-t-30 text-center">All Request For The Store</h6>
             {% comment %} <p class="mg-b-25 mg-lg-b-50">Searching, ordering and paging goodness will be immediately added to the table, as shown in this example.</p> {% endcomment %}
 
             <div class="table-wrapper">
