--- a/src/templates/adminPanel/store/store_details.html
+++ b/src/templates/adminPanel/store/store_details.html
@@ -11,13 +11,13 @@ Store Details
         <div class="br-pageheader pd-y-15 pd-l-20">
             <nav class="breadcrumb pd-0 mg-0 tx-12">
                 <a class="breadcrumb-item" href="{% url 'adminpanel:home' %}">Home</a>
-                <span class="breadcrumb-item active">All Request Store</span>
+                <span class="breadcrumb-item active ">All Request Store</span>
             </nav>
         </div>
 
         <div class="br-pagebody">
             <div class="br-section-wrapper">
-                <h6 class="tx-gray-800 tx-uppercase tx-bold tx-14 mg-b-10">All Request For The Store</h6>
+                <h6 class="tx-gray-800 tx-uppercase tx-bold tx-14 mg-b-10 text-center">All Request For The Store</h6>
                 <form action="" method="POST" enctype="multipart/form-data" onsubmit="return confirm('Are Your Sure, Verified The Store!')">
                     {% csrf_token %}
                     {{ form|crispy }}
