add django message

--- a/src/templates/adminPanel/store/all_store_request.html
+++ b/src/templates/adminPanel/store/all_store_request.html
@@ -12,7 +12,8 @@ All Request Store
                 <span class="breadcrumb-item active text-center">All Request Store</span>
             </nav>
         </div>
-
+        <!--alert message-->
+        {% include "adminPanel/partials/_alerts.html" %}
         <div class="br-pagebody">
             <div class="br-section-wrapper">
             
