--- a/src/staticfiles/assets/css/style.css
+++ b/src/staticfiles/assets/css/style.css
@@ -29,10 +29,10 @@
 /*-----------------------------
     1. Template default css
 -------------------------------*/
-
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Rubik:300,400,500,700,900');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Rubik:300,400,500,700,900'); */
 body {
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 14px;
@@ -90,7 +90,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Roboto', sans-serif !important;
     color: #2f333a;
     margin-top: 0px;
     font-style: normal;
@@ -133,7 +133,7 @@ p {
     line-height: 24px;
     color: #242424;
     margin-bottom: 15px;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 hr {
     margin: 60px 0;
@@ -4973,22 +4973,22 @@ h5.panel-title span {
     font-size: 35px;
     font-weight: 500;
     line-height: 1;
-    margin-bottom: 24px;
-    padding-bottom: 28px;
+    margin-bottom: 12px;
+    padding-bottom: 14px;
     position: relative;
 }
 .overview-content-2 > h2 span {
-    color: #e02c2b;
+    color: inherit;
 }
 .overview-content-2 > h2::before {
-    background-color: #e02c2b;
+    background-color: #2f333a !important;;
     bottom: 0;
     content: "";
     height: 2px;
     left: 0;
     position: absolute;
     transition: all 0.4s ease 0s;
-    width: 80px;
+    width: 100%;
 }
 .overview-content-2 > p.peragraph-blog {
     font-size: 15px;
