--- a/src/templates/home/stores/basic_format_template.html
+++ b/src/templates/home/stores/basic_format_template.html
@@ -15,8 +15,7 @@
         <div class="breadcrumb-content">
             <ul>
                 <li><a href="{% url 'home:home' %}">Home</a></li>
-                <li><a href="{% url 'vendors:home' %}">Vendor</a></li>
-                <li><a href={{ store.get_vendor_store_detail_url }}>@{{store.username}}</a></li>
+                <li><a href="{% url 'stores:stores' %}">Stores</a></li>
                 <li class="active"> {{ page_context.breadcrumb_active }} </li>
             </ul>
         </div>
@@ -38,28 +37,13 @@
                         <div id="lg2" class="tab-pane active">
                             <div class="login-form-container">
                                 <div class="login-register-form">
-                                    <div>
-                                        <h4>{{ store_product.title }}</h4>
-                                    </div>
-                                    <!-- <form action="" method="post"> {% csrf_token %}
+                                    <form action="" method="post"> {% csrf_token %}
                                         {{ form.non_field_errors }}
                                         {{form|crispy}}
                                         <div class="button-box">
                                             <button type="submit"><span>Submit</span></button>
                                         </div>
-                                    </form> -->
-                                    <br>
-                                    <div class="button-box">
-                                        <button type="button"><a href={{ store_product.get_vendor_store_product_update_url }}><span>Update</span></a></button>
-                                    </div>
-                                    <br>
-                                    <div class="button-box">
-                                        <button type="button"><a href={{ store_product.get_vendor_store_product_remove_url }}><span>Remove Product</span></a></button>
-                                    </div>
-                                    <br>
-                                    <div class="button-box">
-                                        <button type="button"><a href={{ store.get_vendor_store_product_add_url }}><span>Add another poduct</span></a></button>
-                                    </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
