--- a/src/templates/home/stores/store_list.html
+++ b/src/templates/home/stores/store_list.html
@@ -15,8 +15,7 @@
         <div class="breadcrumb-content">
             <ul>
                 <li><a href="{% url 'home:home' %}">Home</a></li>
-                <li><a href="{% url 'vendors:home' %}">Vendor</a></li>
-                <li><a href={{ store.get_vendor_store_detail_url }}>@{{store.username}}</a></li>
+                <li><a href="{% url 'stores:stores' %}">Stores</a></li>
                 <li class="active"> {{ page_context.breadcrumb_active }} </li>
             </ul>
         </div>
@@ -38,18 +37,19 @@
                         <div id="lg2" class="tab-pane active">
                             <div class="login-form-container">
                                 <div class="login-register-form">
-                                    <form action="" method="post"> {% csrf_token %}
-                                        {{ store_product_form.non_field_errors }}
-                                        {{store_product_form|crispy}}
-                                        <div class="button-box">
-                                            <button type="submit"><span>Save Changes</span></button>
+                                    {% for store in stores %}
+                                        <div class="single-store">
+                                            <h2>Title: <a href={{ store.get_store_detail_url }}>{{store.title}}</a></h2>
+                                            <ul>
+                                                <li>Tagline: {{store.tagline}}</li>
+                                                <li>Username: {{store.username}}</li>
+                                                <li>Openning Time: {{store.opening_time}}</li>
+                                                <li>Closing Time: {{store.closing_time}}</li>
+                                                <li>Current Status: {{store.status}}</li>
+                                            </ul>
+                                            <br>
                                         </div>
-                                    </form>
-                                    <br>
-                                    <div class="button-box">
-                                        <button type="button"><a href={{ store_product.get_vendor_store_product_remove_url }}><span>Remove Product</span></a></button>
-                                    </div>
-                                    <br>
+                                    {% endfor %}
                                 </div>
                             </div>
                         </div>
