--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -33,6 +33,8 @@
         <!--custom css-->
         <link rel="stylesheet" href="{% static 'assets/css/vendor.css' %}"> 
         <link rel="stylesheet" href="{% static 'all.css' %}"> 
+        <!-- jquery-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         {% comment %} <link rel="stylesheet" href="{% static 'assets/css/user_profile.css' %}"> {% endcomment %}
         <!--font awesome-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
