--- a/src/staticfiles/assets/css/style.css
+++ b/src/staticfiles/assets/css/style.css
@@ -1476,7 +1476,8 @@ textarea:focus {
     z-index: 9999;
 }
 #scrollUp:hover {
-    background: #e02c2b none repeat scroll 0 0;
+    background: #f9aa33 none repeat scroll 0 0;
+    /* background: #e02c2b none repeat scroll 0 0; */
 }
 
 /* button */
@@ -1494,12 +1495,15 @@ textarea:focus {
     display: block;
 }
 .btn-style:hover {
-    background-color: #e02c2b;
-    border: 2px solid #e02c2b;
+    background-color:#f9aa33;
+    border: 2px solid #f9aa33;
+    /* background-color: #f9aa33;
+    border: 2px solid #e02c2b; */
     color: #fff;
 }
 .btn-style-2 {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
+    /* background-color: #f9aa33; */
     border-radius: 3px;
     color: #fff;
     display: inline-block;
@@ -1546,7 +1550,8 @@ textarea:focus {
     line-height: 44px;
 }
 .account-curr-lang-wrap ul li:hover > a {
-    color: #e02c2b;
+    color: #f9aa33;
+    /* color: #f9aa33; */
 }
 .account-curr-lang-wrap ul li a i {
     font-size: 12px;
@@ -1596,7 +1601,8 @@ textarea:focus {
     margin-right: 5px;
 }
 .account-curr-lang-wrap ul li ul li:hover > a {
-    color: #e02c2b;
+    color: #f9aa33;
+    /* color: #f9aa33; */
 }
 .account-curr-lang-wrap > ul > li::before {
     background-color: #999999;
@@ -1656,7 +1662,7 @@ textarea:focus {
 }
 .login-text-content > p span,
 .wishlist-text > p span {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .header-icon-style {
     display: inline-block;
@@ -1681,13 +1687,13 @@ textarea:focus {
     line-height: 1;
 }
 .cart-text > span.cart-digit-bold {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .cart-text > span.digit {
     margin-bottom: 6px;
 }
 .header-cart > a .header-icon-style span {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     border-radius: 100%;
     color: #fff;
     display: inline-block;
@@ -1740,7 +1746,8 @@ textarea:focus {
     color: #242424;
 }
 .shopping-cart-title > h4 a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
+    /* color: #f9aa33; */
 }
 .shopping-cart-title > h6 {
     color: #555;
@@ -1769,8 +1776,10 @@ textarea:focus {
     width: 20px;
 }
 .shopping-cart-delete > a:hover {
-    border: 2px solid #e02c2b;
-    color: #e02c2b;
+    border: 2px solid #f9aa33;
+    /* border: 2px solid #e02c2b; */
+    color: #f9aa33;
+    /* color: #f9aa33; */
 }
 .shopping-cart-total {
     margin: 25px 0 0;
@@ -1787,7 +1796,8 @@ textarea:focus {
     color: #242424;
 }
 .shopping-cart-total > h4 span.shop-total {
-    color: #e02c2b;
+    color: #f9aa33;
+    /* color: #f9aa33; */
     font-weight: 500;
 }
 .shopping-cart-btn {
@@ -1809,7 +1819,8 @@ textarea:focus {
     transition: all 0.3s ease 0s;
 }
 .shopping-cart-btn a:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
+    /* background-color: #f9aa33; */
     color: #fff;
 }
 
@@ -1845,7 +1856,8 @@ textarea:focus {
     top: -2px;
 }
 .main-menu ul li:hover > a {
-    color: #e02c2b;
+    color: #f9aa33;
+    /* color: #f9aa33; */
 }
 .main-menu nav > ul > li > ul.submenu {
     background: #fff none repeat scroll 0 0;
@@ -2009,7 +2021,8 @@ textarea:focus {
 }
 .slider-btn a:hover {
     background-color: #fff;
-    color: #e02c2b;
+    color: #f9aa33;
+    /* color: #f9aa33; */
 }
 .slider-active.owl-carousel > .owl-nav div {
     background-color: #fff;
@@ -2029,7 +2042,8 @@ textarea:focus {
     width: 45px;
 }
 .slider-active.owl-carousel > .owl-nav div:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
+    /* background-color: #f9aa33; */
     color: #fff;
 }
 .slider-active.owl-carousel > .owl-nav div.owl-next {
@@ -2182,7 +2196,7 @@ textarea:focus {
     position: relative;
 }
 .product-tab-list > a.active h4 {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .product-tab-list-wrap > p {
     margin: 22px auto 0;
@@ -2219,7 +2233,7 @@ textarea:focus {
 .pro-action-left > a:hover,
 .pro-action-right > a:hover,
 .product-content > h4 > a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .pro-action-left > a i {
     font-size: 20px;
@@ -2247,7 +2261,8 @@ textarea:focus {
     font-weight: 500;
 }
 .product-price-wrapper > span.product-price-old {
-    color: #e02c2b;
+    color: #f9aa33;
+    /* color: #f9aa33; */
     margin-left: 12px;
     text-decoration: line-through;
 }
@@ -2371,7 +2386,7 @@ textarea:focus {
     font-weight: 500;
 }
 .product-tab-list-2 a.active h4 {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .product-nav .owl-nav {
     position: absolute;
@@ -2388,7 +2403,8 @@ textarea:focus {
     margin-left: 16px;
 }
 .product-nav .owl-nav div:hover {
-    color: #eb3e32;
+    color: #f9aa33;
+    /* color: #eb3e32; */
 }
 .tab-content.jump > .tab-pane {
     display: block;
@@ -2437,7 +2453,8 @@ textarea:focus {
 }
 .footer-content ul li a:hover,
 .footer-contact li a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
+    /* color: #f9aa33; */
 }
 .footer-contact li {
     color: #fff;
@@ -2459,14 +2476,14 @@ textarea:focus {
 }
 .footer-time ul li span {
     font-weight: 500;
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .copyright > p {
     color: #fff;
     margin: 0;
 }
 .copyright > p a {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .copyright > p a:hover {
     text-decoration: underline;
@@ -2487,7 +2504,7 @@ textarea:focus {
     font-size: 16px;
 }
 .footer-social ul li a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .footer-bottom-area {
     padding: 22px 0 24px;
@@ -2675,7 +2692,7 @@ product-quantity {
     opacity: 1;
 }
 .modal-header .close:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .product-quantity {
     display: block;
@@ -2749,7 +2766,7 @@ product-quantity {
     width: 35px;
 }
 .nav-style.owl-carousel > .owl-nav div:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     color: #fff;
 }
 .nav-style.owl-carousel > .owl-nav div.owl-next {
@@ -2777,7 +2794,7 @@ product-quantity {
     padding: 21px 0 22px;
 }
 .breadcrumb-content li {
-    color: #e02c2b;
+    color: #f9aa33;
     display: inline-block;
     font-size: 14px;
     margin-right: 28px;
@@ -2788,7 +2805,7 @@ product-quantity {
     color: #242424;
 }
 .breadcrumb-content li a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .breadcrumb-content li::before {
     background-color: #aaaaaa;
@@ -2835,10 +2852,10 @@ h4.shop-sidebar-title {
     position: relative;
 }
 .shop-catigory ul li:hover > a {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .shop-catigory ul li:hover > a i {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .shop-catigory ul > li a i {
     float: right;
@@ -2900,7 +2917,7 @@ h4.shop-sidebar-title {
     transition: all .3s ease 0s;
 }
 .price_slider_amount > button:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
 }
 .price_filter > span {
     color: #242424;
@@ -2919,7 +2936,7 @@ h4.shop-sidebar-title {
     color: #242424;
 }
 .sidebar-list-style ul li a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .sidebar-list-style ul li:last-child {
     padding: 0 0 0px;
@@ -2951,7 +2968,7 @@ h4.shop-sidebar-title {
     padding: 5px 15px 8px;
 }
 .compare-product-btn > a:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
 }
 .compare-product > p {
     color: #242424;
@@ -2972,7 +2989,7 @@ h4.shop-sidebar-title {
 }
 .shop-tags a:hover {
     border: 1px solid #e02c2b;
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     color: #fff;
 }
 
@@ -3002,7 +3019,7 @@ h4.shop-sidebar-title {
     margin: 0 10px 0 0;
 }
 .view-mode li.active a {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .shop-topbar-left > p {
     display: inline-block;
@@ -3057,7 +3074,7 @@ h4.shop-sidebar-title {
 .pagination-style li a:hover,
 .pagination-style li a.active,
 .pagination-style li a.next:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     color: #fff;
 }
 .pagination-style li a.prev-next {
@@ -3162,7 +3179,7 @@ h4.shop-sidebar-title {
     width: 52px;
 }
 .shop-list-cart-wishlist a:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     color: #fff;
 }
 .product-list .product-price-wrapper > span {
@@ -3183,7 +3200,7 @@ h4.shop-sidebar-title {
     margin: 0 0 22px;
 }
 .product-list-details h4 a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .product-grid .product-list-details {
     display: none;
@@ -3227,7 +3244,7 @@ h4.shop-sidebar-title {
     z-index: 99;
 }
 .product-dec-slider .product-dec-icon:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .product-dec-slider .product-dec-icon.product-dec-next {
     left: auto;
@@ -3257,7 +3274,7 @@ h4.shop-sidebar-title {
     position: relative;
 }
 .product-details-img > span {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     border-radius: 3px;
     color: #fff;
     left: 30px;
@@ -3280,7 +3297,7 @@ h4.shop-sidebar-title {
     font-size: 17px;
 }
 .pro-dec-rating i.theme-star {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .pro-dec-review ul li {
     color: #242424;
@@ -3318,7 +3335,7 @@ h4.shop-sidebar-title {
     margin: 20px 0 27px;
 }
 .in-stock > p span {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .product-details-content > p {
     color: #242424;
@@ -3353,7 +3370,7 @@ h4.shop-sidebar-title {
     width: 13px;
 }
 .pro-dec-feature li span {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .pro-dec-feature {
     padding: 24px 0 37px;
@@ -3424,7 +3441,7 @@ h4.shop-sidebar-title {
     color: #242424;
 }
 .pro-dec-categories li a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .pro-dec-categories {
     margin: 0 0 12px;
@@ -3498,7 +3515,7 @@ h4.shop-sidebar-title {
 }
 .description-review-topbar a.active {
     border-bottom: 2px solid #e02c2b;
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .tab-content.description-review-bottom {
     background-color: #fff;
@@ -3533,7 +3550,7 @@ h4.shop-sidebar-title {
     overflow: hidden;
 }
 .ratting-star i {
-    color: #e02c2b;
+    color: #f9aa33;
     font-size: 18px;
 }
 .ratting-author h3 {
@@ -3642,7 +3659,7 @@ h4.shop-sidebar-title {
     width: 35px;
 }
 .pro-dec-btn > a:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     color: #fff;
 }
 .product-details-content .shop-list-cart-wishlist a {
@@ -3733,7 +3750,7 @@ h4.shop-sidebar-title {
     margin: 0 13px;
 }
 .table-content table td.product-remove a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 h3.page-title {
     font-size: 18px;
@@ -3761,7 +3778,7 @@ h3.page-title {
 .cart-shiping-update > a:hover,
 .cart-clear > button:hover,
 .cart-clear > a:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     color: #fff;
 }
 .cart-clear > button {
@@ -3837,7 +3854,7 @@ h4.cart-bottom-title {
     height: 40px;
 }
 button.cart-btn-2 {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     border: medium none;
     border-radius: 3px;
     color: #fff;
@@ -3928,7 +3945,7 @@ button.cart-btn-2:hover {
     width: 13px;
 }
 h4.grand-totall-title {
-    color: #e02c2b;
+    color: #f9aa33;
     font-size: 20px;
     font-weight: 500;
     margin: 0 0 25px;
@@ -3937,7 +3954,7 @@ h4.grand-totall-title span {
     float: right;
 }
 .grand-totall > a {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     border-radius: 3px;
     color: #fff;
     display: block;
@@ -3952,7 +3969,7 @@ h4.grand-totall-title span {
     background-color: #242424;
 }
 .product-wishlist-cart > a {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     border-radius: 3px;
     color: #fff;
     font-size: 13px;
@@ -4027,7 +4044,7 @@ h4.grand-totall-title span {
     transition: all 0.3s ease 0s;
 }
 .login-toggle-btn>a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .login-register-tab-list {
     display: flex;
@@ -4060,7 +4077,7 @@ h4.grand-totall-title span {
 }
 .login-register-tab-list.nav a.active h4,
 .login-register-tab-list.nav a h4:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .login-form button {
     border: medium none;
@@ -4080,7 +4097,7 @@ h4.grand-totall-title span {
     transition: all 0.3s ease 0s;
 }
 .button-box button:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     color: #fff;
 }
 
@@ -4109,7 +4126,7 @@ h5.panel-title a {
     position: relative;
 }
 h5.panel-title a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 h5.panel-title a::before {
     color: #242424;
@@ -4230,10 +4247,10 @@ h5.panel-title span {
     color: #242424;
 }
 .login-forget > a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .login-forget > p {
-    color: #e02c2b;
+    color: #f9aa33;
     margin: 0;
 }
 .checkout-login-btn > a {
@@ -4264,7 +4281,7 @@ h5.panel-title span {
 .checkout-login-btn > a:hover,
 .checkout-register > a:hover,
 .billing-btn > button:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     color: #fff;
 }
 .checkout-progress > h4 {
@@ -4358,11 +4375,11 @@ h5.panel-title span {
     text-transform: uppercase;
 }
 .billing-back>a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .billing-back > a i {
     bottom: -1px;
-    color: #e02c2b;
+    color: #f9aa33;
     font-size: 18px;
     position: relative;
 }
@@ -4437,7 +4454,7 @@ h5.panel-title span {
     margin-top: 10px;
 }
 .billing-back-btn>span a {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .billing-back-btn>span a:hover {
     text-decoration: underline;
@@ -4452,7 +4469,7 @@ h5.panel-title span {
     text-transform: uppercase;
 }
 .edit-address>a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 
 /*---------------------------
@@ -4511,7 +4528,7 @@ h5.panel-title span {
 }
 .entries-edit-delete > a:hover,
 .entries-edit-delete > a.edit:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
 }
 
 /*---------------------------
@@ -4531,7 +4548,7 @@ h5.panel-title span {
 .contact-info-icon i {
     border: 2px solid #e02c2b;
     border-radius: 50px;
-    color: #e02c2b;
+    color: #f9aa33;
     display: inline-block;
     font-size: 30px;
     height: 60px;
@@ -4541,7 +4558,7 @@ h5.panel-title span {
 }
 .contact-info-wrapper:hover .contact-info-icon i {
     border: 2px solid #e02c2b;
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     color: #fff;
 }
 .contact-info-content h4 {
@@ -4560,7 +4577,7 @@ h5.panel-title span {
     color: #333;
 }
 .contact-info-content p a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .contact-info-icon {
     margin-bottom: 20px;
@@ -4593,7 +4610,7 @@ h5.panel-title span {
     padding: 20px 20px;
 }
 .submit.btn-style {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     border: medium none;
     cursor: pointer;
     margin-top: 30px;
@@ -4655,7 +4672,7 @@ h5.panel-title span {
     color: #2f333a;
 }
 .blog-content h2 a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .blog-date-categori li {
     display: inline-block;
@@ -4665,11 +4682,11 @@ h5.panel-title span {
 }
 .blog-date-categori li a i,
 .blog-date-categori li i {
-    color: #e02c2b;
+    color: #f9aa33;
     margin-right: 3px;
 }
 .blog-date-categori li a:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .blog-date-categori li:last-child {
     margin-right: 0px;
@@ -4694,7 +4711,7 @@ h5.panel-title span {
     background: transparent none repeat scroll 0 0;
     border: 2px solid #e02c2b;
     border-radius: 3px;
-    color: #e02c2b;
+    color: #f9aa33;
     display: inline-block;
     font-weight: 500;
     line-height: 1;
@@ -4743,7 +4760,7 @@ h5.panel-title span {
     cursor: pointer;
 }
 .header-search-form > button:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .blog-gallery-slider .owl-nav div {
     color: #fff;
@@ -4757,7 +4774,7 @@ h5.panel-title span {
     visibility: hidden;
 }
 .blog-gallery-slider .owl-nav div:hover {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .blog-gallery-slider .owl-nav div.owl-next {
     left: auto;
@@ -4778,7 +4795,7 @@ h5.panel-title span {
 .video-icon > a {
     background-color: #fff;
     border-radius: 50px;
-    color: #e02c2b;
+    color: #f9aa33;
     display: inline-block;
     font-size: 35px;
     height: 60px;
@@ -4786,7 +4803,7 @@ h5.panel-title span {
     width: 60px;
 }
 .video-icon > a:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     color: #fff;
 }
 .blog-area .shop-sidebar-wrapper {
@@ -4864,7 +4881,7 @@ h5.panel-title span {
     width: 100%;
 }
 .blog-content > p span {
-    color: #e02c2b;
+    color: #f9aa33;
 }
 .text-single > p {
     margin: 0 0 14px;
@@ -4911,7 +4928,7 @@ h5.panel-title span {
     margin-right: 28px;
 }
 .blog-dec-btn > a {
-    color: #e02c2b;
+    color: #f9aa33;
     font-size: 25px;
     line-height: 1;
 }
@@ -4947,7 +4964,7 @@ h5.panel-title span {
     padding: 25px 20px;
 }
 .blog-reply-wrapper form .text-leave input {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     border: medium none;
     border-radius: 3px;
     color: #fff;
@@ -5002,7 +5019,7 @@ h5.panel-title span {
     display: inline-block;
 }
 .count-title h2 {
-    color: #e02c2b;
+    color: #f9aa33;
     font-size: 40px;
     font-weight: bold;
     letter-spacing: 0.2px;
@@ -5045,7 +5062,7 @@ h5.panel-title span {
     top: 50%;
 }
 .team-action a {
-    color: #e02c2b;
+    color: #f9aa33;
     font-size: 20px;
     transition: all 0.3s ease 0s;
     margin: 0 10px;
@@ -5099,7 +5116,7 @@ h5.panel-title span {
     z-index: 99;
 }
 .progress-bar {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.15) inset;
     color: #fff;
     float: left;
@@ -5261,7 +5278,7 @@ h5.panel-title span {
     opacity: 1;
 }
 .testimonial-2-active .owl-nav div:hover {
-    background-color: #e02c2b;
+    background-color: #f9aa33;
     color: #fff;
 }
 .single-testimonial-4 > h4 {
