--- a/static_cdn/static_root/assets/css/vendor.css
+++ b/static_cdn/static_root/assets/css/vendor.css
@@ -84,3 +84,10 @@
         font-size: 12px;
     }
 }
+
+.vendor-spinner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:450px;
+}
