--- a/static_cdn/static_root/assets/css/vendor.css
+++ b/static_cdn/static_root/assets/css/vendor.css
@@ -85,6 +85,14 @@
     }
 }
 
+/* modal spinner  */
+
+.modal-title{
+    display: flex;
+    justify-content: start;
+    align-items: start;
+}
+
 .vendor-spinner{
     display: flex;
     justify-content: center;
