--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -8,13 +8,13 @@
                             <div class="footer-about mb-40">
                                 <div class="footer-logo">
                                     <a href="index.html">
-                                        <img src="assets/img/logo/footer-logo.png" alt="">
+                                        <img src="{% static 'assets/img/logo/footer-logo.png' %}" alt="">
                                     </a>
                                 </div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidi ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
                                 <div class="payment-img">
                                     <a href="#">
-                                        <img src="assets/img/icon-img/payment.png" alt="">
+                                        <img src="{% static 'assets/img/icon-img/payment.png' %}" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -26,7 +26,7 @@
                                 </div>
                                 <div class="footer-content">
                                     <ul>
-                                        <li><a href="about-us.html">About Us</a></li>
+                                        <li><a href="#">About Us</a></li>
                                         <li><a href="#">Delivery Information</a></li>
                                         <li><a href="#">Privacy Policy</a></li>
                                         <li><a href="#">Terms & Conditions</a></li>
