--- a/src/templates/partials/top_header.html
+++ b/src/templates/partials/top_header.html
@@ -10,7 +10,7 @@
 			<div class="col-lg-8 col-md-8 col-12 col-sm-8">
 				<div class="account-curr-lang-wrap f-right">
 					<ul>
-						<li class="top-hover">
+						{% comment %} <li class="top-hover">
 							<a href="#">Language: (ENG) <i class="ion-chevron-down"></i></a>
 							<ul>
 								<li><a href="#">Bangla </a></li>
@@ -27,7 +27,7 @@
 								<li><a href="#">Rupee (INR)</a></li>
 								<li><a href="#">Dirham (AED)</a></li>
 							</ul>
-						</li>
+						</li> {% endcomment %}
 						<li class="top-hover">
 							<a href="#">Setting <i class="ion-chevron-down"></i></a>
 							<ul>
