--- a/src/templates/partials/_alerts.html
+++ b/src/templates/partials/_alerts.html
@@ -1,21 +1,35 @@
 {% if messages %}
-{% for message in messages %}
-<div id="message" class="container">
-    <div class="alert alert-{{message.tags}} alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert">
-            <span aria-hidden="true">&times;</span>
-        </button>
-        <strong>
-            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-            Error
-            {% else %}
-            {{message.tags|title}}
-            {% endif %}
-        </strong>
-        {{message}}
+    {% for message in messages %}
+    <div id="message" class="container" style="position: absolute;z-index: 100;margin: -66px 0px;text-align: center; padding:0px 80px;">
+        <div class="alert alert-{{message.tags}} alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <strong>
+                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                Error
+                {% else %}
+                {{message.tags|title}}
+                {% endif %}
+            </strong>
+            {{message}}
+        </div>
     </div>
-</div>
-{% endfor %}
-
+    {% endfor %}
 {% endif %}
 
+<script>
+    $(document).ready(function(){
+        var msg = document.getElementById("message");
+
+        setTimeout(function(){
+            msg.style.display = "none"; 
+        }, 3000);
+
+    })
+    var msg = document.getElementById("message");
+
+    setTimeout(function(){ 
+        msg.style.display = "none"; 
+    }, 4000);
+</script>
