--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -33,6 +33,7 @@
         <!--custom css-->
         <link rel="stylesheet" href="{% static 'assets/css/vendor.css' %}"> 
         <link rel="stylesheet" href="{% static 'all.css' %}"> 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <!-- jquery-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         {% comment %} <link rel="stylesheet" href="{% static 'assets/css/user_profile.css' %}"> {% endcomment %}
@@ -44,8 +45,8 @@
         {% comment %} {% include 'partials/_header.html' %} {% endcomment %}
         <header class="header-area">
             {% include 'partials/top_header.html' %} 
-            {% include 'partials/mid_header.html' %}
-            {% include 'partials/_navbar.html' %}
+            {% comment %} {% include 'partials/mid_header.html' %}
+            {% include 'partials/navbar.html' %} {% endcomment %}
         </header>
 
         {% block content %}
