--- a/src/templates/partials/top_header.html
+++ b/src/templates/partials/top_header.html
@@ -1,50 +1,55 @@
 {% load static %}
-<div class="header-top black-bg">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-4 col-md-4 col-12 col-sm-4">
-				<div class="welcome-area">
-					<p>Default welcome msg!</p>
+<header class="header-area">
+	<div class="header-top black-bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 col-md-4 col-12 col-sm-4">
+					<div class="welcome-area">
+						<p>Default welcome msg!</p>
+					</div>
 				</div>
-			</div>
-			<div class="col-lg-8 col-md-8 col-12 col-sm-8">
-				<div class="account-curr-lang-wrap f-right">
-					<ul>
-						{% comment %} <li class="top-hover">
-							<a href="#">Language: (ENG) <i class="ion-chevron-down"></i></a>
-							<ul>
-								<li><a href="#">Bangla </a></li>
-								<li><a href="#">Arabic</a></li>
-								<li><a href="#">Hindi </a></li>
-								<li><a href="#">Spanish</a></li>
-							</ul>
-						</li>
-						<li class="top-hover">
-							<a href="#">Currency: (USD) <i class="ion-chevron-down"></i></a>
-							<ul>
-								<li><a href="#">Taka (BDT)</a></li>
-								<li><a href="#">Riyal (SAR)</a></li>
-								<li><a href="#">Rupee (INR)</a></li>
-								<li><a href="#">Dirham (AED)</a></li>
-							</ul>
-						</li> {% endcomment %}
-						<li class="top-hover">
-							<a href="#">Setting <i class="ion-chevron-down"></i></a>
-							<ul>
-								{% if request.user.is_authenticated %}
-								<li><a href="#wishlist.html">Wishlist </a></li>
-								<li><a href="#my-account.html">my account</a></li>
-								<li><a href="{% url 'auth:logout' %}">Logout</a></li>
-								{% else %}
-								<li><a href="#wishlist.html">Wishlist </a></li>
-								<li><a href="{% url 'auth:login' %}">Login</a></li>
-								<li><a href="{% url 'auth:register' %}">Register</a></li>
-								{% endif %}
-							</ul>
-						</li>
-					</ul>
+				<div class="col-lg-8 col-md-8 col-12 col-sm-8">
+					<div class="account-curr-lang-wrap f-right">
+						<ul>
+							{% comment %} <li class="top-hover">
+								<a href="#">Language: (ENG) <i class="ion-chevron-down"></i></a>
+								<ul>
+									<li><a href="#">Bangla </a></li>
+									<li><a href="#">Arabic</a></li>
+									<li><a href="#">Hindi </a></li>
+									<li><a href="#">Spanish</a></li>
+								</ul>
+							</li>
+							<li class="top-hover">
+								<a href="#">Currency: (USD) <i class="ion-chevron-down"></i></a>
+								<ul>
+									<li><a href="#">Taka (BDT)</a></li>
+									<li><a href="#">Riyal (SAR)</a></li>
+									<li><a href="#">Rupee (INR)</a></li>
+									<li><a href="#">Dirham (AED)</a></li>
+								</ul>
+							</li> {% endcomment %}
+							<li class="top-hover">
+								<a href="#">Setting <i class="ion-chevron-down"></i></a>
+								<ul>
+									{% if request.user.is_authenticated %}
+									<li><a href="#wishlist.html">Wishlist </a></li>
+									<li><a href="#my-account.html">my account</a></li>
+									<li><a href="{% url 'auth:logout' %}">Logout</a></li>
+									{% else %}
+									<li><a href="#wishlist.html">Wishlist </a></li>
+									<li><a href="{% url 'auth:login' %}">Login</a></li>
+									<li><a href="{% url 'auth:register' %}">Register</a></li>
+									{% endif %}
+								</ul>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+{% include "partials/mid_header.html" %}
+{% include "partials/_navbar.html" %}
+
+</header>
