navbar issue fix with auth

--- a/src/templates/partials/_navbar.html
+++ b/src/templates/partials/_navbar.html
@@ -93,11 +93,14 @@
 								<li><a href="shop.html">burger</a></li>
 								<li><a href="shop.html">pizza</a></li>
 								<li><a href="shop.html">cold drink</a></li> {% endcomment %}
-								{% if request.user.store_set.all.count == 0 %}
-									<li><a href="{% url 'vendors:register_store' %}"><i class="fas fa-store"></i> Become a Seller</a></li>
-								{% else %}
-									<li><a href="{% url 'vendors:home' %}"><i class="fas fa-store"></i> Your Store</a></li>
+								{% if request.user.is_authenticated %}
+									{% if request.user.store_set.all.count == 0 %}
+										<li><a href="{% url 'vendors:register_store' %}"><i class="fas fa-store"></i> Become a Seller</a></li>
+									{% else %}
+										<li><a href="{% url 'vendors:home' %}"><i class="fas fa-store"></i> Your Store</a></li>
+									{% endif %}
 								{% endif %}
+								
 							</ul>
 						</nav>
 					</div>
