--- a/src/templates/partials/_navbar.html
+++ b/src/templates/partials/_navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="header-bottom transparent-bar black-bg">
+<div class="header-bottom transparent-bar black-bg" id="navbar-cross">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-12">
