--- a/src/templates/partials/_navbar.html
+++ b/src/templates/partials/_navbar.html
@@ -99,6 +99,7 @@
 									{% else %}
 										<li><a href="{% url 'vendors:home' %}"><i class="fas fa-store"></i> Your Store</a></li>
 									{% endif %}
+										<li><a href="{% url 'auth:logout' %}"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
 								{% endif %}
 								
 							</ul>
