--- a/src/templates/partials/top_header.html
+++ b/src/templates/partials/top_header.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% comment %} <header class="header-area"> {% endcomment %}
 	<div class="header-top black-bg top-bar" id="topbar-dismiss">
-		<div class="container-fluid top-bar-cross" id="top-cross">X</div>
+		<div class="container-fluid top-bar-cross" id="top-cross"><i class="fas fa-times"></i></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-12 col-sm-4">
