--- a/src/staticfiles/all.css
+++ b/src/staticfiles/all.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 /* font-family: 'Roboto', sans-serif; */
+:root{
+	--bg-pri:#344955 !important;
+	--bg-pri-dark:#344955 !important;
+	--bg-pri-light:#4A6572 !important;
+	--bg-sec:#f9aa33 !important;
+	--color-sec:#f9aa33 !important;
+	--color-pri:#2f333a !important;
+}
 .bg-pri{
 	background-color:#344955 !important;
 }
@@ -27,10 +35,11 @@
 	color:#f9aa33 !important;
 }
 
+/* topbar start */
 .top-bar{
 	position: fixed;
     z-index: 100;
-    background: green;
+    background: var(--bg-pri-light);
     width: 100%;
     height: 60px;
 }
@@ -42,10 +51,11 @@
     z-index: 18;
     position: absolute;
     padding-right: 19px;
-    color: red;
+    color: #ccc;
 	font-size: 20px;
 	cursor:pointer;
 }
+/* topbarend */
 
 #headbar-cross{
 	padding-top:55px;
