--- a/src/templates/partials/ajax.html
+++ b/src/templates/partials/ajax.html
@@ -1,7 +1,8 @@
 <script>
     $("#top-cross").click(function(){
         console.log("hello cross")
-        $("#topbar-dismiss").hide()
+        $("#topbar-dismiss").fadeOut(1500)
+        {% comment %} $("#topbar-dismiss").hide() {% endcomment %}
         {% comment %} $("#navbar-cross").css({"margin-top":"0px"}) {% endcomment %}
         $("#headbar-cross").css({"padding-top":"0px"})
         $(".transparent-bar.stick").css({"margin-top":"0px"})
