--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -68,6 +68,9 @@
         <!--jquery-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
         <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js'>
+        <!--custom vendor js-->
+        {% comment %} <script  type="text/javascript" src="{% static 'assets/js/vendor/store_detail_ajax.js' %}"></script> {% endcomment %}
+        <script  type="text/javascript" src="{% static 'assets/js/vendor/test.js' %}"></script>
         
     </body>
 </html>
