--- a/src/templates/partials/ajax.html
+++ b/src/templates/partials/ajax.html
@@ -3,7 +3,7 @@
         console.log("hello cross")
         $("#topbar-dismiss").fadeOut(1500)
         {% comment %} $("#topbar-dismiss").hide() {% endcomment %}
-        {% comment %} $("#navbar-cross").css({"margin-top":"0px"}) {% endcomment %}
+        $("#navbar-cross").css({"margin-top":"0px"})
         $("#headbar-cross").css({"padding-top":"0px"})
         $(".transparent-bar.stick").css({"margin-top":"0px"})
     })
