--- a/static_cdn/static_root/assets/css/style.css
+++ b/static_cdn/static_root/assets/css/style.css
@@ -1325,7 +1325,8 @@ textarea:focus {
     background: #fff;
 }
 .black-bg {
-    background: #2f333a
+    background: #344955;
+    /* background: #2f333a; */
 }
 .black-bg-2 {
     background: #26292e
@@ -1532,7 +1533,7 @@ textarea:focus {
 /* header top */
 .welcome-area > p {
     color: #fff;
-    margin: 9px 0 0;
+    margin: 0px 0 0;
 }
 .account-curr-lang-wrap ul li {
     display: inline-block;
@@ -1909,7 +1910,8 @@ textarea:focus {
     padding-top: 0px;
 }
 .main-menu ul li.top-hover ul li > a::before {
-    background: #e02c2b none repeat scroll 0 0;
+    /* background: #e02c2b none repeat scroll 0 0; */
+    background: #f9aa33 none repeat scroll 0 0;
     border-radius: 50%;
     content: "";
     height: 7px;
@@ -1967,7 +1969,8 @@ textarea:focus {
     float: right;
 }
 .transparent-bar.stick {
-    animation: 700ms ease-in-out 0s normal none 1 running fadeInDown;
+    margin-top:58px;
+    /* animation: 300ms ease-in-out 0s normal none 1 running fadeInDown; */
     /* background-color: #fff; */
     color: #fff !important;
     border-bottom: 0 solid #4a90e2;
@@ -1975,7 +1978,10 @@ textarea:focus {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 9999;
+    z-index: 100;
+}
+#navbar-cross{
+    /* margin-top:0px; */
 }
 .stick .main-menu ul li a {
     line-height: 60px;
@@ -2660,8 +2666,6 @@ textarea:focus {
 
 .product-quantity a {
     background: #fff none repeat scroll 0 0;
-    border: medium none;
-    border-radius: 3px;
     color: #333;
     cursor: pointer;
     font-size: 13px;
@@ -2670,25 +2674,28 @@ textarea:focus {
     letter-spacing: 0.025em;
     line-height: 40px;
     margin-left: 20px;
-    padding: 0 20px;
+    padding:12px 15px;
     text-transform: uppercase;
     transition: all 0.3s ease 0s;
+    border: 1px solid #232f34;
+    border-radius: 5px;
 }
 
-product-quantity {
+.product-quantity {
     display: block;
     margin: 0 0 16px;
-    overflow: hidden;
+    /* overflow: hidden; */
+    padding:10px 0px;
 }
 .product-quantity button:hover {
     background: #f9aa33 none repeat scroll 0 0;
-    color: #333;
-
+    color: #fff;
 }
 
 .product-quantity a:hover {
     background: #f9aa33 none repeat scroll 0 0;
-    color:#fff;
+    color:#fff !important;
+    border: none;
 }
 
 .quickview-color-wrap {
