--- a/static_cdn/static_root/assets/css/vendor.css
+++ b/static_cdn/static_root/assets/css/vendor.css
@@ -1,30 +1,73 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
-.open{
-    position: absolute;
+/* vendor store detail start */
+.open-btn{
+    /* position: absolute; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     top: 0px;
     right: 0px;
-    color: white;
+    color: white !important;
     background: green;
+    opacity: 1;
     padding: 10px 15px;
     font-size: 16px;
-    border-radius: 7px;
+    border-radius: 5px;
     text-transform: uppercase;
     animation: close 1.7s cubic-bezier(.5, 0, 1, 1) infinite alternate;
-
+    cursor: pointer;
 }
-.close{
-    position: absolute;
+.open-btn p{
+    color: white;
+    font-size: 16px;
+    margin:0px;
+}
+.openbtn-loading-close{
+    width:25px !important;
+    height:25px !important; 
+    display:none !important;
+    padding-right:5px !important;
+}
+
+.openbtn-loading-open{
+    width:25px !important;
+    height:25px !important; 
+    display:inline-block !important;
+    padding-right:5px !important;
+}
+
+.close-btn{
+    /* position: absolute; */
+    opacity: 1 ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     top: 0px;
     right: 0px;
-    color: white;
+    color: white !important;
     background: red;
     padding: 10px 15px;
     font-size: 16px;
-    border-radius: 7px;
+    border-radius: 5px;
     text-transform: uppercase;
     animation: close 1.7s cubic-bezier(.5, 0, 1, 1) infinite alternate;
+    cursor: pointer;
 }
+
+.close-btn p{
+    color: white;
+    font-size: 16px;
+    margin:0px;
+}
+
+#close-btn-loading{
+    width:25px;
+    height:25px; 
+    display:none;
+    padding-right:5px;
+}
+
 
 @keyframes open {
     50% {
@@ -72,9 +115,9 @@
 }
 .vendor_close p:nth-child(2){
     margin-bottom: 10px;
-
-
 }
+
+
 
 @media only screen and (min-width: 991.5px) and (max-width: 1199.5px)  {
     .vendor_open p:nth-child(1){
@@ -84,6 +127,14 @@
         font-size: 12px;
     }
 }
+
+.taka-icon{
+    height:22px; 
+    width:22px; 
+    margin-right:7px;
+}
+
+/* vendor store detail end */
 
 /* modal spinner  */
 
@@ -99,3 +150,13 @@
     align-items: center;
     height:450px;
 }
+
+/* vendor add product start  */
+.vendor-product-add{
+    display:block; 
+    margin:0 auto; 
+    max-width:324px; 
+    max-height:324px; 
+    padding-bottom:50px
+}
+/* vendor add product end  */
