--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,12 +32,17 @@
         <script src="{% static 'assets/js/vendor/modernizr-2.8.3.min.js' %}"></script>
         <!--custom css-->
         <link rel="stylesheet" href="{% static 'assets/css/vendor.css' %}"> 
+        <link rel="stylesheet" href="{% static 'assets/css/home.css' %}"> 
         <link rel="stylesheet" href="{% static 'all.css' %}"> 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <!-- jquery-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         {% comment %} <link rel="stylesheet" href="{% static 'assets/css/user_profile.css' %}"> {% endcomment %}
+        <!--fonts-->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
         <!--font awesome-->
+        <script type="text/javascript"> (function() { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v5.15.1/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     </head>
     <body>
@@ -45,7 +50,7 @@
         {% comment %} {% include 'partials/_header.html' %} {% endcomment %}
         {% include 'partials/top_header.html' %} 
         <header class="header-area" id="headbar-cross">
-            {% include 'partials/mid_header.html' %}
+            {% comment %} {% include 'partials/mid_header.html' %} {% endcomment %}
             {% include 'partials/_navbar.html' %}
         </header>
 
